Messing around with config generation for IntelliJ Import.